# mimesis

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/polygon/: Cargo.toml
examples/polygon/src/: main.rs
src/: background_remover.rs  binary_image.rs  contour.rs  draw.rs  error.rs  lib.rs  mesh.rs  meshing.rs  pixel.rs
