[package]
name = "mimesis"
version = "0.2.0"
edition = "2024"
authors = ["Florent Veilly"]
description = "Generate 3D meshes from images using contour tracing and polygon extrusion."
license-file = "LICENSE"
keywords = ["mesh", "graphics", "earcut", "contour-tracing", "polygon"]
readme = "README.md"
repository = "https://github.com/fveilly/mimesis"

[workspace]
members = ["bin"]

[dependencies]
image = "0.25.6"
bit-vec = "0.8.0"
num-traits = "0.2.19"
geo = "0.30.0"
earcutr = "0.4.3"
imageproc = "0.25.0"
ort = { version = "2.0.0-rc.1", default-features = false, features = ["ndarray", "load-dynamic"], optional = true }
ndarray = { version = "0.16.1", optional = true}
fast_image_resize =  { version = "5.1.4", optional = true}
anyhow = "1.0.98"

[features]
default = []
background-remover = ["dep:ort", "dep:ndarray", "dep:fast_image_resize"]